--- a/portfolio3.css
+++ b/portfolio3.css
@@ -13,6 +13,10 @@
     justify-content: space-between;
 }
 
+.title-container {
+    min-width: 300px;
+}
+
 .links-container {
     border: 4px solid green;
     display: flex;
@@ -26,5 +30,20 @@
     width: 100px;
     height: 100px;
     min-width: 100px;
+    min-height: 100px;
+}
+
+.thumbs-container {
+    border: 4px solid blue;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+    flex-basis: 50%;
+}
+
+.thumb {
+    min-width: 200px;
     min-height: 100px;
 }
