--- a/portfolio3.css
+++ b/portfolio3.css
@@ -6,11 +6,22 @@
     padding: 0;
 }
 
+.page-container {
+    display: flex;
+    flex-flow: column wrap;
+}
+
 .top-container {
     border: 4px solid red;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    flex-basis: 100%;
+    order: 1;
+}
+
+.middle-container {
+    order: 2;
 }
 
 .title-container {
