--- a/portfolio3.css
+++ b/portfolio3.css
@@ -18,10 +18,16 @@
     justify-content: space-between;
     flex-basis: 100%;
     order: 1;
+    position: fixed;
+    min-width: 100%;
+    background-color: white;
 }
 
 .middle-container {
+    border: 4px solid orange;
     order: 2;
+    position: absolute;
+    top: 115px;
 }
 
 .title-container {
