--- a/portfolio3.css
+++ b/portfolio3.css
@@ -18,16 +18,15 @@
     justify-content: space-between;
     flex-basis: 100%;
     order: 1;
-    position: fixed;
-    min-width: 100%;
+    position: sticky;
+    top: 0;
     background-color: white;
 }
 
 .middle-container {
     border: 4px solid orange;
     order: 2;
-    position: absolute;
-    top: 115px;
+
 }
 
 .title-container {
