--- a/portfolio3.css
+++ b/portfolio3.css
@@ -102,7 +102,6 @@ body {
     border-radius: 25px;
     flex-grow: 1;
     max-width: 400px;
-    background-color: white;
     border: 6px solid rgb(83, 83, 83);
     margin-bottom: 20px;
     box-shadow: 5px 5px 5px rgb(0, 0, 0, .3);
@@ -119,12 +118,12 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    opacity: .5;
+    opacity: 1;
 }
 
 .thumb span {
     position: absolute;
-    top: 20px;
+    bottom: 20px;
     left: 20px;
 }
 
