--- a/portfolio3.css
+++ b/portfolio3.css
@@ -8,12 +8,13 @@
 
 body {
     font-family: 'Share Tech', sans-serif;
-    background: url(images/bg/retro-bfg2.jpg) no-repeat center center fixed;
+    /* background: url(images/bg/retro-bg2.jpg) no-repeat center center fixed; */
     background-color: #eac761;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-image: linear-gradient(#eac761, #a08842);
+    /* -webkit-background-size: cover; */
+    /* -moz-background-size: cover; */
+    /* -o-background-size: cover; */
+    /* background-size: cover; */
 }
 
 .page-container {
@@ -150,7 +151,8 @@ body {
     padding: 0 10% 50px 10%;
     margin: 20px 0 80px 0;
     padding-top: 40px;
-    border-top: 2px solid rgba(0, 0, 0, .3);
+    border-top: 5px solid #4b553f;
+    border-bottom: 5px solid #4b553f;
     background-color: #7f8e6d;
 }
 
