--- a/portfolio3.css
+++ b/portfolio3.css
@@ -86,6 +86,33 @@ body {
     box-shadow: 5px 5px 5px rgb(0, 0, 0, .3);
 }
 
+.popup {
+    display: none;
+    position: fixed;
+    transform: translate(0, -25px);
+    background-color: rgba(0,0,0,.7);
+    color: white;
+    height: 40px;
+    width: 150px;
+    border-radius: 5px;
+}
+
+.link:hover > .popup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn .4s;
+}
+
+.link:hover {
+    cursor: pointer;
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+ } 
+
 .thumbs-container {
     /* border: 4px solid blue; */
     display: flex;
