--- a/portfolio3.css
+++ b/portfolio3.css
@@ -87,31 +87,33 @@ body {
 }
 
 .popup {
-    display: none;
+    /* display: none; */
     position: fixed;
     transform: translate(0, -25px);
     background-color: rgba(0,0,0,.7);
     color: white;
-    height: 40px;
-    width: 150px;
+    /* height: 40px;
+    width: 150px; */
     border-radius: 5px;
+    padding: 5px 15px 5px 15px;
+    opacity: 0;
+    transition: opacity .5s;
 }
 
 .link:hover > .popup {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: fadeIn .4s;
+
+    /* animation: fadeIn .4s; */
+    opacity: 1;
 }
 
 .link:hover {
     cursor: pointer;
 }
 
-@keyframes fadeIn {
+/* @keyframes fadeIn {
     0% {opacity: 0;}
     100% {opacity: 1;}
- } 
+ }  */
 
 .thumbs-container {
     /* border: 4px solid blue; */
@@ -164,6 +166,10 @@ body {
     background-color: rgba(0, 0, 0, .5);
     padding: 10px 10px 15px 20px;
     width: 100%;
+}
+
+a {
+    color: white;
 }
 
 .about-container {
